Chore: Add Swagger API docs
