# docs/swagger.json
@@ -40,6 +40,17 @@
                     "albums"
                 ],
                 "summary": "Create an album",
+                "parameters": [
+                    {
+                        "description": "JSON of album to create",
+                        "name": "album",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.album"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -95,6 +106,11 @@
                     }
                 }
             }
+        }
+    },
+    "definitions": {
+        "main.album": {
+            "type": "object"
         }
     }
 }
